# embeddings

./: .env.docker  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.chroma/index/: id_to_uuid_b6227e04-40d5-444a-99a9-1561ad7e52a0.pkl  index_metadata_b6227e04-40d5-444a-99a9-1561ad7e52a0.pkl  uuid_to_id_b6227e04-40d5-444a-99a9-1561ad7e52a0.pkl
.database/: chroma-collections.parquet  chroma-embeddings.parquet
.database/index/: id_to_uuid_51178e2a-b131-4284-90b1-74f97925821c.pkl  id_to_uuid_f278acee-150a-443b-81e1-a6e939f79b7a.pkl  index_metadata_51178e2a-b131-4284-90b1-74f97925821c.pkl  index_metadata_f278acee-150a-443b-81e1-a6e939f79b7a.pkl  uuid_to_id_51178e2a-b131-4284-90b1-74f97925821c.pkl  uuid_to_id_f278acee-150a-443b-81e1-a6e939f79b7a.pkl
