[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
chromadb = "^0.3.22"
black = "^23.3.0"
pylint = "^2.17.4"
python-dotenv = "^1.0.0"
instructorembedding = "^1.0.0"
langchain = "^0.0.162"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
